# Promptflow-to-Semantic-Kernel

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  wikipedia.py  workshop.md
promptflow/: extract_query_from_question.jinja2  search_result_from_url.py
src/agent_service/: README.md  agent_service.py
src/copywriting/process_framework/: README.md  main.py  part1.py
src/evaluation/: README.md  evaluate.py  print_eval.py  wiki.jsonl
src/process_framework/: __init__.py  wiki_chat_process.py
src/process_framework/prompts/: __init__.py
src/process_framework/steps/: __init__.py  augmented_chat_step.py  get_wiki_url_step.py  process_search_result_step.py  search_url_step.py
src/process_framework/utils/: __init__.py  observability_utils.py
src/promptflow/: flow.dag.yaml  get_wiki_url.py
src/wikipedia/: __init__.py
src/wikipedia/agent_service/: __init__.py  agent_service.py  setup.py
src/wikipedia/evaluation/: __init__.py  evaluate.py  evaluation_result.json  print_eval.py
src/wikipedia/process_framework/: __init__.py  wiki_chat_process.py
src/wikipedia/process_framework/prompts/: augmented_chat_prompt.py  extract_query_prompt.py
src/wikipedia/process_framework/steps/: augmented_chat_step.py  extract_query_step.py
src/wikipedia/process_framework/utils/: observability_utils.py  web_utils.py  wiki_utils.py
src/wikipedia/promptflow/: __init__.py
