[project]
name = "digitalhangar"
version = "0.1.0"
description = "Examples of using Semantic Kernel Process Framework as an alternative to AzureML Prompt Flow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-evaluation>=1.8.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b38",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "semantic-kernel>=1.32.2",
]
